Mac Desktop morning 20190510

--- a/5.md
+++ b/5.md
@@ -120,7 +120,7 @@ Influential as it was, Herberg’s book attracted some meaningful dissent. Criti
 
 [^29]:	Andrew M. Greeley, _Ethnicity, Denomination, and Inequality_ (Beverly Hills: Sage Publications, 1976); Robert S. Ellwood, _1950, Crossroads of American Religious Life_ (Louisville: Westminster John Knox Press, 2000); Robert Wuthnow, _After Heaven: Spirituality in America Since the 1950s_ (Berkeley: University of California Press, 1998).
 
-Commentators also took issue with Herberg’s position that ethnicity—understood as connections based on common national origins—lost much of its potency in postwar mass society. Rather than disappearing, Nathan Glazer and Daniel Patrick Moynihan suggested in _Beyond the Melting Pot_ (1963), ethnicity was changing. They maintained that the word first appeared in American dictionaries in 1953 signifying a new reality. “Ethnicity,” they held, “is the steady expansion of the term ‘ethnic groups’ from minority and marginal subgroups at the edge of society—groups expected to assimilate, to disappear, to continue as survivals, exotic, or troublesome—to major elements of a society.”[^30] Ethnic groups “were recreated as something new, but still as identifiable groups.” They were “not a survival from the age of mass immigration but a new social form.” Many neighborhoods and work groups still remained ethnically homogenous. As Joshua Zeitz has demonstrated, many New York city enclaves continued to speak the language of the homeland at home and at neighborhood businesses well until the late 1950s. Similarly, fraternal and charitable organizations continued to structure life for many second and third generation ethnics.[^31] In addition, the Catholic preference for parochial schools solidified ethnic divisions. Glazer and Moynihan concurred with Herberg that the future would most likely resemble the triple melting pot in which religion provided the basic divisions of identity among the white American population, but it had yet to arrive in 1963.
+Commentators also took issue with Herberg’s position that ethnicity—understood as connections based on common national origins—lost much of its potency in postwar mass society. Rather than disappearing, Nathan Glazer and Daniel Patrick Moynihan suggested in _Beyond the Melting Pot_ (1963), ethnicity was changing. They maintained that the word first appeared in American dictionaries in 1953 signifying a new reality. “Ethnicity,” they held, “is the steady expansion of the term ‘ethnic groups’ from minority and marginal subgroups at the edge of society—groups expected to assimilate, to disappear, to continue as survivals, exotic, or troublesome—to major elements of a society.”[^30] Ethnic groups “were recreated as something new, but still as identifiable groups.” They were “not a survival from the age of mass immigration but a new social form.” Many neighborhoods and work groups still remained ethnically homogenous. As Joshua Zeitz has demonstrated, many New York city enclaves continued to speak the language of the homeland at home and at neighborhood businesses well until the late 1950s. Similarly, fraternal and charitable organizations continued to structure life for many second and third generation ethnics.[^31] In addition, the Catholic preference for parochial schools solidified ethnic divisions. Glazer and Moynihan concurred with Herberg that religion would provide the basic divisions of identity among white Americans in the future, but it had not quite happened in 1963.
 
 [^30]:	Nathan Glazer and Daniel P. Moynihan, _Beyond the Melting Pot; the Negroes, Puerto Ricans, Jews, Italians, and Irish of New York City_ (Cambridge: M.I.T. Press, 1963), 5, 7.
 
@@ -131,9 +131,11 @@ Commentators also took issue with Herberg’s position that ethnicity—understo
 ### The Struggles for Inclusion
 
 
-If ethnic Americans had by and large moved to the center of American life, racial minorities had not. Conventional white liberal wisdom recognized the problems that plagued racial minorities, but insisted that Puerto Ricans, Negroes, and Mexicans would eventually become fully integrated, especially if they adopted mainstream cultural patterns particularly with regard to family life. Prejudice, they held, was irrational and would fade in due course.[^32] Schooled by experience, racial minorities were less sanguine. Many Puerto Ricans told stories of discrimination in education, housing, and employment despite knowing English and possessing excellent credentials. The debate between the promise of assimilation and the reality came memorably through in “America” from _West Side Story_. “Life can be bright in America” is answered by “If you’re all white in America.” The persistence of race-based exclusion prompted formation of such new organizations as the Congress of Racial Equality (1942), Southern Christian Leadership Conference (1957), Puerto Rican Forum (1957), and the American G.I. Forum (1948) to supplement the older National Association for the Advancement of Colored People (1909) and the League of United Latin American Citizens (LULAC) (1929) to achieve full citizenship rights.
+If ethnic Americans had by and large moved to the center of American life, racial minorities had not. Conventional white liberal wisdom recognized the problems that plagued racial minorities, but insisted that Puerto Ricans, Negroes, and Mexicans would eventually become fully integrated, especially if they adopted mainstream cultural patterns particularly with regard to family life. Glazer and Moynihan laid as much responsibility on the distortions introduced into black life by the prominence of families headed by female, which they claimed dated from slavery, as outright discrimination. Prejudice, they held, was irrational and would fade in due course.[^32]
 
-[^32]:	Glazer and Moynihan discuss black and Puerto Rican particularities in Glazer and Moynihan, _Beyond the Melting Pot,_ 24-136. They introduce the soon-to-be infamous discussion of the black family, hobbled not by the overt values they hold but the damages wrought by slavery, as the obstacle to success (47-51). They dismiss political protest as “shrill” and “ineffective” (84).
+Schooled by experience, racial minorities were less sanguine. Many Puerto Ricans told stories of discrimination in education, housing, and employment despite knowing English and possessing excellent credentials. The debate between the promise of assimilation and the reality came memorably through in “America” from _West Side Story_. “Life can be bright in America” is answered by “If you’re all white in America.” The persistence of race-based exclusion prompted formation of such new organizations as the Congress of Racial Equality (1942), Southern Christian Leadership Conference (1957), Puerto Rican Forum (1957), and the American G.I. Forum (1948) to supplement the older National Association for the Advancement of Colored People (1909) and the League of United Latin American Citizens (LULAC) (1929) to achieve full citizenship rights. Glazer and Moynihan might have dismissed protest as "shrill" and "ineffective" (84); people of color did not.
+
+[^32]:	Glazer and Moynihan, 47-51.
 
 Achieving inclusion on grounds of a shared humanity required a challenge to a tradition of race talk that posited hierarchies based on alleged innate capacities. In contrast, black and white liberals rejected beliefs in biology as destiny, explaining white-black differences as the result of history and environment. The 1951 UNESCO statement on race, written with contributions from anthropologist Ashley Montagu and sociologist E. Franklin Frazier, set the tone with its bold proclamation that there existed no credible scientific knowledge that one human group was innately intellectually or emotionally superior or that human groups differed in their inborn capacity for development.[^33] Nearly all postwar studies of race began from Swedish economist Gunnar Myrdal’s _American Dilemma_ (1944). Chosen to lead the Carnegie Corporation study because the Corporation president thought he would be less biased than a native-born American, Myrdal initially found black people and practices, particularly the emotion-filled religious services, strange. In time, however, he realized that “in their basic human traits, the Negroes are inherently not much different from other people.” As such, their differences from “other people” resulted from white refusal to treat blacks equally. “It is . . . the white majority group that naturally determines the Negro’s ‘place.’ All our attempts to reach scientific explanations of why the Negroes are what they are and why they live as they do have regularly led to determinants on the white side of the race line.”[^34] White beliefs about black folk were often the product of myth and tradition, not impartial observation. By itself, knowing the “facts” of Negro life would not change white attitudes, Myrdal maintained. Yet he remained hopeful that exclusion and hatred would disappear, pointing to the decay of caste theory and black refusal to be a patient, submissive minority. Eventually, he posited, the conflict between the high American ideals of freedom and equality and discrimination would become too difficult to maintain psychologically and socially and would resolve itself in favor of the ideal. “The bright side [of the American dilemma] is that the conquering of color caste is America’s own innermost desire.”[^35]
 
