--- a/5.md
+++ b/5.md
@@ -58,7 +58,7 @@ Political scientists also assumed class was a less salient factor in political b
 
 [^12]:	Dahl, _Preface_, 132, 150-1.
 
-The American standard of living may have been within the grasp of some workers but many found that achieving it had unintended consequences. As social commentator David Riesman pointed out in his introduction to Eli Chinoy’s classic study of Lansing, Michigan autoworkers, Chinoy’s autoworkers were “victimized by the growing prestige of consumer goods,” convinced that the “care and feeding of products” was the “mainstay of life.”[^13] On reflection, Chinoy found, many workers saw consumption as a trap that prevented advancement. Chinoy cited one worker who regarded his downfall as the purchase of a car because it chained him to the factory to make payments. Still another believed he might have been somebody if only he had put his mind to it and “not worshipped the almighty dollar.” Chinoy concluded that autoworkers believed they had to make a choice between occupational advancement and acquisition of material possessions. When accumulation of goods proved emotionally unsatisfying, influenced by the mythology of opportunity, they blamed themselves rather than existing economic arrangements for their failure to advance. Faced with their own lack of mobility, autoworkers put special emphasis on that of their children.[^14]
+Workers in core sectors may have consumed good that had previously been unavailble to much labor, but maintaing the standard of living had unintended consequences. As social commentator David Riesman pointed out in his introduction to Eli Chinoy’s classic study of Lansing, Michigan autoworkers, Chinoy’s autoworkers were “victimized by the growing prestige of consumer goods,” convinced that the “care and feeding of products” was the “mainstay of life.”[^13] On reflection, Chinoy found, many workers saw consumption as a trap that prevented advancement. Chinoy cited one worker who regarded his downfall as the purchase of a car because it chained him to the factory to make payments. Still another believed he might have been somebody if only he had put his mind to it and “not worshipped the almighty dollar.” Chinoy concluded that autoworkers believed they had to make a choice between occupational advancement and acquisition of material possessions. When accumulation of goods proved emotionally unsatisfying, influenced by the mythology of opportunity, they blamed themselves rather than existing economic arrangements for their failure to advance. Faced with their own lack of mobility, autoworkers put special emphasis on that of their children.[^14]
 
 [^13]:	David Riesman, “Introduction,” Ely Chinoy, _Automobile Workers and the American Dream_ (Urbana: University of Illinois Press, 1992), xx-xxii.
 
