--- a/5.md
+++ b/5.md
@@ -91,7 +91,7 @@ In Herberg's rendition, the three faith groups actually eased entrance into the 
 
 [^21]:	Herberg, _Protestant, Catholic, Jew_, 38-39.
 
-Herberg bemoaned the lack of religious seriousness of the American religion. Rather than confronting ultimate questions, it devolved into exaggerated judgments of others’ behavior. Religion as morality was the major impulse of the growing use of the phrase “Judeo-Christian tradition,” which signified the centrality of the commonalities among the three religions. It is hard to imagine nineteenth-century religious leaders accepting those similarities were more important than the differences, forming the National Conference of Christians and Jews, or celebrating Gandhi as a moral paragon rather than labeling him a pagan.[^22] Herberg drew special attention to shifts in the Catholic Church. The Church might proclaim itself the one true church, but “in their actual social attitudes American Catholics . . . tend to think of their church as a denomination existing side by side with other denominations in a pluralistic harmony.”[^23] As William Halsey notes, many Catholics believed that natural law was compatible with the inclinations of the Founders.[^24]
+Herberg bemoaned the lack of religious seriousness of the American religion. Rather than confronting ultimate questions, it devolved into exaggerated judgments of others’ behavior. Religion as morality was the major impulse of the growing use of the phrase “Judeo-Christian tradition,” which signified the centrality of the commonalities among the three religions. It is hard to imagine nineteenth-century religious leaders accepting those similarities were more important than the differences, forming the National Conference of Christians and Jews, or celebrating Gandhi as a moral paragon rather than labeling him a pagan.[^22] Herberg drew special attention to shifts in the Catholic Church. The Church might proclaim itself the one true church, but “in their actual social attitudes American Catholics . . . tend to think of their church as a denomination existing side by side with other denominations in a pluralistic harmony.”[^23] As William Halsey notes, many Catholics believed that the Church's concept of natural law was compatible with the Founders'.[^24]
 
 [^22]:	Alan Petigny, _The Permissive Society: America, 1941-1965_ (New York: Cambridge University Press, 2009), 82-86.
 
