Laptop 11 May 2019 Afternoon

--- a/5.md
+++ b/5.md
@@ -137,7 +137,7 @@ Schooled by experience, racial minorities were less sanguine. Many Puerto Ricans
 
 [^32]:	Glazer and Moynihan, 47-51.
 
-One intellectual tradition that people of color and their allies challenged was race talk, which posited a hierarchy based on different innate capacities. Both black and white liberals explained racial differences not by biology but by history and environment. The 1951 UNESCO statement on race, written with contributions from anthropologist Ashley Montagu and sociologist E. Franklin Frazier, boldly proclaimed that there existed no credible scientific knowledge that one human group was innately intellectually or emotionally superior or that human groups differed in their inborn capacity for development.[^33] Nearly all postwar studies of race owed Swedish economist Gunnar Myrdal’s _American Dilemma_ (1944). Chosen to lead the Carnegie Corporation study because the Corporation president thought he would be less biased than a native-born American, Myrdal initially found black people and practices, particularly the emotion-filled religious services, strange. In time, however, he realized that “in their basic human traits, the Negroes are inherently not much different from other people.” As such, their differences from “other people” resulted from white refusal to treat blacks equally. “It is . . . the white majority group that naturally determines the Negro’s ‘place.’ All our attempts to reach scientific explanations of why the Negroes are what they are and why they live as they do have regularly led to determinants on the white side of the race line.”[^34] White beliefs about black folk were often the product of myth and tradition, not impartial observation. By itself, knowing the “facts” of Negro life would not change white attitudes, Myrdal maintained. Yet he remained hopeful that exclusion and hatred would disappear, pointing to the decay of caste theory and black refusal to be a patient, submissive minority. Eventually, he posited, the conflict between the high American ideals of freedom and equality and discrimination would become too difficult to maintain psychologically and socially and would resolve itself in favor of the ideal. “The bright side [of the American dilemma] is that the conquering of color caste is America’s own innermost desire.”[^35]
+One intellectual tradition that people of color and their allies challenged was race talk, which posited a hierarchy based on different innate capacities. Both black and white liberals explained racial differences not by biology but by history and environment. The 1951 UNESCO statement on race, written with contributions from anthropologist Ashley Montagu and sociologist E. Franklin Frazier, boldly proclaimed that there existed no credible scientific knowledge that one human group was innately intellectually or emotionally superior or that human groups differed in their inborn capacity for development.[^33] Nearly all postwar studies of race began from Swedish economist Gunnar Myrdal’s _American Dilemma_ (1944). Chosen to lead the Carnegie Corporation study because the Corporation president thought he would be less biased than a native-born American, Myrdal initially found black people strange, particularly their emotion-filled religious services. In time, however, he realized that “in their basic human traits, the Negroes are inherently not much different from other people.” As such, their differences from “other people” resulted from white refusal to treat blacks equally. “It is . . . the white majority group that naturally determines the Negro’s ‘place.’ All our attempts to reach scientific explanations of why the Negroes are what they are and why they live as they do have regularly led to determinants on the white side of the race line.”[^34] White beliefs about black folk were often the product of myth and tradition, not impartial observation. By itself, knowing the “facts” of Negro life would not change white attitudes, Myrdal maintained. Yet he remained hopeful that exclusion and hatred would disappear, pointing to the decay of caste theory and black refusal to be a patient, submissive minority. Eventually, he posited, the conflict between the high American ideals of freedom and equality and discrimination would become too difficult to maintain psychologically and socially and would resolve itself in favor of the ideal. “The bright side [of the American dilemma] is that the conquering of color caste is America’s own innermost desire.”[^35]
 
 [^33]:	The statement was controversial in the scientific community on grounds that Montagu arbitrarily dismissed possibilities of mental difference without sufficient testing or explanation. Physical differences clearly existed, critics charged, so mental and temperamental ones might also. Nadine Weidman, “An Anthropologist on TV: Ashley Montagu and the Biological Basis of Human Nature, 1945-1960,” in _Cold War Social Science: Knowledge Production, Liberal Democracy and Human Nature_, ed. Mark Solovey and Hamilton Cravens (New York: Palgrave MacMillan, 2012), 220-21; Perrin Selcer, “Beyond the Cephalic Index: Negotiating Politics to Produce Unesco’s Scientific Statements on Race,” _Current Anthropology_ (2012).
 
