--- a/5.md
+++ b/5.md
@@ -187,7 +187,7 @@ Liberals also overestimated their own colorblindness. Many of the standards said
 
 [^42]:	Stampp, _The Peculiar Institution: Slavery in the Ante-Bellum South_, vii.
 
-Although he might have put it that way, it was telling that he did not. Stampp was not the only white liberal to ignore black culture. Glazer and Moynihan, for instance, contended that the “Negro is only an American,” who had no special values or culture to protect.[^43] Milton Gordon claimed based on interviews that the leadership of many mainstream African American organizations did not “envision the retention of a Negro subcommunity with its own institutions as a desirable long-range goal for Negroes in the United States.”[^44] Others followed Myrdal in emphasizing the supreme importance of slavery and segregation in defining black life. Historian Stanley Elkins envisioned slavery as sharing with Nazi death camps a tendency to dissolve all previous identity and culture. Anthropologists Abram Kardiner and Lionel Ovesay posited that whites and blacks shared the same culture and goals. Racism frustrated black attainment of those goals, which resulted in black males neurotically exaggerating white personality traits.[^45]
+Although he might have put it that way, it was telling that he did not. Stampp was not the only white liberal to ignore black culture. Glazer and Moynihan, for instance, contended that the “Negro is only an American,” who had no special values or culture to protect.[^43] Milton Gordon claimed based on interviews that the leadership of many mainstream African American organizations did not “envision the retention of a Negro subcommunity with its own institutions as a desirable long-range goal for Negroes in the United States.”[^44] Others emphasized the primary role of slavery and segregrating in shaping and distorting black life and culture. Historian Stanley Elkins envisioned slavery as sharing with Nazi death camps a tendency to dissolve all previous identity and culture. Anthropologists Abram Kardiner and Lionel Ovesay posited that whites and blacks shared the same culture and goals. Racism frustrated black attainment of those goals, which resulted in black males neurotically exaggerating white personality traits.[^45]
 
 [^42]:	Glazer and Moynihan, _Beyond the Melting Pot_, 53.
 
@@ -195,11 +195,11 @@ Although he might have put it that way, it was telling that he did not. Stampp w
 
 [^45]:		Stanley M. Elkins, _Slavery; a Problem in American Institutional and Intellectual Life._ (Chicago: University of Chicago Press, 1959); Abram Kardiner and Lionel Ovesey, _The Mark of Oppression: A Psychosocial Study of the American Negro_ (New York: Norton, 1951).
 
-Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison saw in the blues an outlook that could be one the building blocks of a reconstituted American culture.[^46] Baldwin and Hansberry, on the other hand, were considerably more dubious about American ability to include people of color on anything approaching meaningful terms and while never full-blown separatists, admired black rebelliousness and independence.
+Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values that were considerably different from mainstream ones and which were far from consequences of oppression. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison envisioned meaningful black contributions to a truly integrated and reconstituted American culture.[^46] Baldwin and Hansberry, on the other hand, were considerably more dubious about American ability to include people of color on anything approaching meaningful terms and while never full-blown separatists, admired black rebelliousness and independence.
 
 [^46]:	Henry Louis Gates, “King of the Cats,” _The New Yorker_ (1996).
 
-Ellison’s criticism of racial liberalism appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that made it all too easy to assume there was a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Ellison took exception to Myrdal’s portrait of Negro culture as solely reactive to white power and the typical Negro personality as the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Although Myrdal had maintained that it was to the advantage of American Negroes to assimilate and acquiring traits dominant whites valued, Ellison countered that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. Nor should whites, who could join blacks in a mutual undertaking that would help “create a more human American.”[^47]
+Ellison’s criticism of racial liberalism appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that assumed a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Nor was Negro culture reactive or the typical Negro personality the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Countering Myrdal's assertion that blacks would succeed by acquiring traits dominant whites valued, Ellison sharply noted that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. Nor should whites, who could join blacks in a mutual undertaking that would help “create a more human American.”[^47]
 
 [^47]:	Ellison, “Shadow,” 339-41.
 
